compiler/testData/diagnostics/tests/dataClasses/innerOuterDataClass.kt
<!WRONG_MODIFIER_CONTAINING_DECLARATION!>inner<!> data class Outer(val x: Int)